saint-lascivious.github.io: implement card tables to assist nav
plus minor formatting

 - implement card tables
 - minor formatting
 - update random url array
 - bump service worker cache version

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -182,7 +182,15 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Archived Posts</span></h3>
-           </div>
+            <ul>
+              <li><a href="archive.html#2022metrics">2022 Metrics</a></li>
+              <li><a href="archive.html#munin-pihole-plugins-v08-02-00">Munin Pi-hole Plugins: 08.02.00</a></li>
+              <li><a href="archive.html#reportingproblems">Reporting Problems</a></li>
+              <li><a href="archive.html#aquickstop">A QUICk Stop</a></li>
+              <li><a href="archive.html#materialdesigndark">Material Design <s>Lite</s> Dark</a></li>
+              <li><a href="archive.html#iosmacosmadeeasy">iOS/macOS Made Easy</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="2022metrics">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -209,7 +217,7 @@
             <p>
               As time marches forward into the new year, and us with it, please be aware that DNS resolution via QUIC legacy ports (<code>UDP 784</code> and <code>8853</code>) is to be suspended as of today Friday, 1 January 2023 NZDT.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="munin-pihole-plugins-v08-02-00">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -233,7 +241,7 @@
             <ol>
               <li>If you are using the <code>telnet</code> API, which is the plugin default, these changes do not concern you.</li>
             </ol>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="reportingproblems">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -248,7 +256,7 @@
             <p>
               Your input is instrumental in the improvement of these services.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="aquickstop">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -260,7 +268,7 @@
             <p>
               DNS resolution via QUIC legacy ports (<code>UDP 784</code> and <code>8853</code>) is to be suspended as of Friday, 1 January 2023 NZDT.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="materialdesigndark">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -275,7 +283,7 @@
             <p>
               I plan on making all this available as a standalone template at some point in the near future, and when I do I'll more than likely make some form of noise about it here.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="iosmacosmadeeasy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -290,7 +298,7 @@
             <p>
               You can choose your preferred DNS Profile (DoH, DoT, DoH/DoT) and get started <a href="connecttosainternet.html#appleiosmacos">here</a>.
             </p>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
