--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -179,7 +179,13 @@
             <p>
               The following describes connecting to Sainternet Filtered DNS in several platforms, services.
             </p>
-           </div>
+            <ul>
+              <li><a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a></li>
+              <li><a href="connecttosainternet.html#appleiosmacos">Apple iOS/MacOS</a></li>
+              <li><a href="connecttosainternet.html#googlechromechromium">Google Chrome/Chromium</a></li>
+              <li><a href="connecttosainternet.html#mozillafirefox">Mozilla Firefox</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -197,7 +203,7 @@
               <li>Enter <code>dns.sainternet.xyz</code></li>
               <li>Done</li>
             </ol>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="appleiosmacos">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -241,7 +247,7 @@
               <li>These profiles are not digitally signed and that is expected/normal.</li>
               <li>Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.</li>
             </ol>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="googlechromechromium">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -256,7 +262,7 @@
               <li>Enter <code>dns.sainternet.xyz</code></li>
               <li>Done</li>
             </ol>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -281,7 +287,7 @@
             <ol>
               <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).</li>
             </ol>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
