--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -165,6 +165,12 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Debug</span></h3>
+            <ul>
+              <li><a href="debug.html#consolelogging">Console Logging</a></li>
+              <li><a href="debug.html#deletestorage">Delete Storage</a></li>
+              <li><a href="debug.html#pingserviceworker">Ping Service Worker</a></li>
+              <li><a href="debug.html#serviceworkerinfo">Service Worker Info</a></li>
+            </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="consolelogging">
@@ -179,7 +185,7 @@
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-consolelogging">
               Toggle console logging
             </span>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="deletestorage">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -193,7 +199,7 @@
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-deletestorage">
               Delete local and session storage
             </span>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="pingserviceworker">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -207,7 +213,7 @@
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-pingserviceworker">
               Ping service worker
             </span>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="serviceworkerinfo">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -221,7 +227,7 @@
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-serviceworkerinfo">
               Get service worker info
             </span>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
