--- a/.formatted/devdiary.html
+++ b/.formatted/devdiary.html
@@ -188,7 +188,12 @@
             <p>
               Often about technical topics.
             </p>
-           </div>
+            <ul>
+              <li><a href="devdiary.html#devdiaryidliketothinkimprettyprogressive">Dev Diary: I’d Like to Think I’m Pretty Progressive</a></li>
+              <li><a href="devdiary.html#devdiarygottagofast">Dev Diary: Gotta Go Fast!</a></li>
+              <li><a href="devdiary.html#devdiarygoingoffline">Dev Diary: Going Offline</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="devdiaryidliketothinkimprettyprogressive">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -238,7 +243,7 @@
                 Profit.
               </li>
             </ol>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="devdiarygottagofast">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -321,7 +326,7 @@
                 Google decides how the Internet works.
               </li>
             </ol>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="devdiarygoingoffline">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -360,7 +365,7 @@
             <p>
               Your browser was tested to see if it can support service worker registration, and if supported, a service worker was installed and registered. That service worker then created and populated a cache of critical objects (all those required for <code>sainternet.xyz</code> to function, approximately 4MB), and removed any orphaned caches. At this point you should be able to disconnect from the network or enter Flight Mode, and continue to navigate the site as usual.
             </p>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
