--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -174,7 +174,18 @@
             <p>
               Answers to some frequently asked questions regarding <code>dns.sainternet.xyz</code> and <code>sainternet.xyz</code>.
             </p>
-           </div>
+            <ul>
+              <li><a href="frequentlyaskedquestions.html#yourispisokwiththis">Your ISP Is OK with This?</a></li>
+              <li><a href="frequentlyaskedquestions.html#whatswithalltherainbows">What’s with All the Rainbows?</a></li>
+              <li><a href="frequentlyaskedquestions.html#isdnssainternetxyzlegal">Is dns.sainternet.xyz Legal?</a></li>
+              <li><a href="frequentlyaskedquestions.html#doesdnssainternetxyzhaveanapi">Does dns.sainternet.xyz Have an API?</a></li>
+              <li><a href="frequentlyaskedquestions.html#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a></li>
+              <li><a href="frequentlyaskedquestions.html#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a></li>
+              <li><a href="frequentlyaskedquestions.html#howmuch">How Much?</a></li>
+              <li><a href="frequentlyaskedquestions.html#howdoessainternetmakemoney">How does Sainternet Make Money?</a></li>
+              <li><a href="frequentlyaskedquestions.html#sowhofundssainternet">So, Who Funds Sainternet?</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="yourispisokwiththis">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -195,7 +206,7 @@
             <p>
               Historically my ISP has been quite progressive, and they have also been willing to work with me. I suspect they're not so much "OK" with the <code>dns.sainternet.xyz</code> research resolver, as they not "not OK" with it."
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="whatswithalltherainbows">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -258,7 +269,7 @@
             <p class="mdl-tooltip mdl-tooltip--top" for="tooltip-no">
               You can't tell me what to do.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="isdnssainternetxyzlegal">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -276,7 +287,7 @@
             <p>
               Content hosted at a given IP may however be illegal and use of <code>dns.sainternet.xyz</code> does not shield you from liability. This service processes DNS requests and DNS requests alone, it is not a proxy and will not obscure your browsing habits from anyone with access to your data stream.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="doesdnssainternetxyzhaveanapi">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -285,7 +296,7 @@
             <p>
               No.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="pwaversionneverseemstochange">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -306,7 +317,7 @@
             <p>
               Typically one of the main points in deploying a service worker in the first place (other than managing offline) is to have a largely static core, and assets that can be updated dynamically.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="whowhatwhenwhereandwhy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -356,7 +367,7 @@
             <p>
               To better educate myself in the deployment, management and development of related technologies, while hopefully providing a better domain name resolution experience along the way.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="howmuch">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -368,7 +379,7 @@
             <p>
               Sainternet services are provided free to all.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="howdoessainternetmakemoney">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -377,7 +388,7 @@
             <p>
               It doesn't.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="sowhofundssainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -389,7 +400,7 @@
             <p>
               Sainternet requires very little additional overhead outside of my own network requirements, and its continued development is somewhat of a hobby for me.
             </p>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
