--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -198,7 +198,16 @@
             <p>
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
             </p>
-           </div>
+            <ul>
+              <li><a href="newsandupdates.html#somepunaboutblocksorblocking">Some Pun About Blocks or Blocking</a></li>
+              <li><a href="newsandupdates.html#thepolishinvasionof2023">The Polish Invasion of 2023</a></li>
+              <li><a href="newsandupdates.html#certaindoom">CERTain Doom</a></li>
+              <li><a href="newsandupdates.html#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a></li>
+              <li><a href="newsandupdates.html#analyticsdisclosure">Analytics Disclosure</a></li>
+              <li><a href="newsandupdates.html#pwa">PWA!</a></li>
+              <li><a href="archive.html#archivedposts">Archived Posts</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="somepunaboutblocksorblocking">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -402,7 +411,7 @@
             <p>
               Your patience and understanding is appreciated while navigating this important change.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="enablejavascript">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -417,7 +426,7 @@
             <p>
               Consider allowing JavaScript to run on <code>sainternet.xyz</code> for the best experience.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="unepokedexsilvousplait">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -493,7 +502,7 @@
               Deutsch
             </p>
             <pre>nslookup -type=txt waumpel.pokedex dns.sainternet.xyz</pre>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="analyticsdisclosure">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -517,7 +526,7 @@
             <p>
               That's the beauty of it, and the reason I had no qualms about implementing this. Once you're using <code>dns.sainternet.xyz</code>, analytics collection on this site is rendered entirely ineffective.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="pwa">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -541,7 +550,7 @@
             <ol>
               <li id="pwasupportdisclaimer">Support on iOS, macOS, and Windows I am not entirely confident about.</li>
             </ol>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
