--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -164,7 +164,14 @@
             <p>
               This page lists some of my more popular projects on GitHub.
             </p>
-           </div>
+            <ul>
+              <li><a href="projects.html#dnsproxy-config">dnsproxy config</a></li>
+              <li><a href="projects.html#haha_cache_go_brrr">haha cache go brrr</a></li>
+              <li><a href="projects.html#munin-pihole-plugins">munin pihole plugins</a></li>
+              <li><a href="projects.html#saint-lascivious_github_io">sainternet.xyz</a></li>
+              <li><a href="projects.html#unbound-config">unbound config</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="dnsproxy-config">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -179,7 +186,7 @@
             <p>
               Example service using AdGuard Team's dnsproxy to provide encrypted transports to existing local and remote nameservers, can be easily modified to purpose.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="haha_cache_go_brrr">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -191,7 +198,7 @@
             <p>
               A very silly, very shitty little DNS cache warmup tool born of sleep deprivation, far too much coffee, and a poor moral compass.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="munin-pihole-plugins">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -203,7 +210,7 @@
             <p>
               A set of Munin plugins for monitoring various Pi-hole® stats.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="saint-lascivious_github_io">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -218,7 +225,7 @@
             <p>
               The GitHub Pages repository currently hosting this site.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="unbound-config">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -233,7 +240,7 @@
             <p>
               Originally designed purely for personal use, unbound-config is a project that has evolved around the configuration and management of NLnet Labs' Unbound recursive nameserver.
             </p>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
