--- a/.formatted/reportaproblem.html
+++ b/.formatted/reportaproblem.html
@@ -179,7 +179,13 @@
             <p>
               The following sections describe various ways in which adding your voice can help <code>dns.sainternet.xyz</code> and, or <code>sainternet.xyz</code> improve.
             </p>
-           </div>
+            <ul>
+              <li><a href="reportaproblem.html#bugreport">Bug Report</a></li>
+              <li><a href="reportaproblem.html#blacklistproposal">Blacklist Proposal</a></li>
+              <li><a href="reportaproblem.html#whitelistproposal">Whitelist Proposal</a></li>
+              <li><a href="reportaproblem.html#securitydisclosure">Security Disclosure</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="bugreport">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -191,7 +197,7 @@
             <p>
               Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=bug&template=BUG_REPORT.md&title=sainternet.xyz%3A+bug+report">Bug Report</a> to help <code>sainternet.xyz</code> improve.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="blacklist">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -203,7 +209,7 @@
             <p>
               Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=blacklist&template=BLACKLIST.md&title=sainternet.xyz%3A+blacklist+proposal">Blacklist Proposal</a>.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="whitelist">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -215,7 +221,7 @@
             <p>
               Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=whitelist&template=WHITELIST.md&title=sainternet.xyz%3A+whitelist+proposal">Whitelist Proposal</a>.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="securitydisclosure">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -227,7 +233,7 @@
             <p>
               <a class="embiggen" href="mailto:admin@sainternet.xyz" target="_blank" rel="noopener noreferrer">admin@sainternet.xyz</a>
             </p>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
