--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -179,7 +179,13 @@
             <p>
               Sainternet Filtered DNS (<code>dns.sainternet.xyz</code>) is made possible using, but neither endorsed nor condoned by, the following projects.
             </p>
-           </div>
+            <ul>
+              <li><a href="technologies.html#dnsdist">dnsdist</a></li>
+              <li><a href="technologies.html#dnsproxy">dnsproxy</a></li>
+              <li><a href="technologies.html#piholeftl">pihole-FTL</a></li>
+              <li><a href="technologies.html#unbound">unbound</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="dnsdist">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -191,7 +197,7 @@
             <p>
               dnsdist is a highly DNS-, <a href="https://wikipedia.org/wiki/Denial-of-service_attack">DoS</a>- and abuse-aware loadbalancer. Its goal in life is to route traffic to the best server, delivering top performance to legitimate users while shunting or blocking abusive traffic.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="dnsproxy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -203,7 +209,7 @@
             <p>
               A simple DNS proxy server that supports all existing DNS protocols including DNS-over-TLS, DNS-over-HTTPS, DNSCrypt, and DNS-over-QUIC. Moreover, it can work as a DNS-over-HTTPS, DNS-over-TLS or DNS-over-QUIC server.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="piholeftl">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -215,7 +221,7 @@
             <p>
               FTLDNS (pihole-FTL) provides an interactive API and also generates statistics for <a href="https://pi-hole.net/">Pi-hole®</a>'s Web interface.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="unbound">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -227,7 +233,7 @@
             <p>
               Unbound is a validating, recursive, caching DNS resolver. It is designed to be fast and lean and incorporates modern features based on open standards.
             </p>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
