--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -179,7 +179,12 @@
             <p>
               The following describes testing Sainternet Filtered DNS using several methods, utilities.
             </p>
-           </div>
+            <ul>
+              <li><a href="testsainternet.html#usingdig">Using dig</a></li>
+              <li><a href="testsainternet.html#usingdnslookup">Using dnslookup</a></li>
+              <li><a href="testsainternet.html#usingnslookup">Using nslookup</a></li>
+            </ul>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="usingdig">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -193,7 +198,7 @@
               Example Sainternet dig query:
             </p>
             <pre>dig example.org @dns.sainternet.xyz</pre>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="usingdnslookup">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -231,7 +236,7 @@
               Example Sainternet dnslookup query using the QUIC protocol (DoQ):
             </p>
             <pre>dnslookup example.org quic://dns.sainternet.xyz</pre>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="usingnslookup">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -245,7 +250,7 @@
               Example Sainternet nslookup query:
             </p>
             <pre>nslookup example.org dns.sainternet.xyz</pre>
-           </div>
+          </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
