--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -179,6 +179,9 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
+            <ul>
+              <li><a href="265.html#example">Example Pokédex over DNS Queries</a></li>
+            </ul>
             <a href="pokedexoverdns.html" class="subterfuge">
               <picture class="light-mode-img">
                 <source srcset="resources/images/wurmple.webp" type="image/webp">
@@ -199,7 +202,7 @@
             <p>
               Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="example">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
