--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -181,6 +181,9 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
+            <ul>
+              <li><a href="404.html#example">Example Pokédex over DNS Queries</a></li>
+            </ul>
             <a href="pokedexoverdns.html" class="subterfuge">
               <picture class="light-mode-img">
                 <source srcset="resources/images/luxio.webp" type="image/webp">
@@ -201,7 +204,7 @@
             <p>
               Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
             </p>
-           </div>
+          </div>
         </div>
         <div class="sainternet-container mdl-grid" id="example">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
